adds Images to webpage

--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+    <img
+    src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+    />
+<img
+    src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+    alt="That's a lion"
+    />
+<img
+    src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+    alt="That's a lion"
+    title="Lions are majestic creatures!"
+    />
   </body>
 </html>
